# Vision_Based_Desktop_Automation

./: .gitignore  README.md  pyproject.toml  run_guide.md
src/vision_desktop_automation/: __init__.py  __main__.py  api_client.py  automation.py  cli.py  config.py  desktop.py  grounding.py  screenshot.py
tests/: conftest.py  test_api_client.py  test_grounding.py  test_screenshot.py
